# anime

./: .gitattributes  README.md  README.qmd  paper.html  paper.qmd
.github/workflows/: R-CMD-check.yaml
paper/: README.qmd
r/: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md  README.qmd
r/R/: aggregate.R  anime.R  extendr-wrappers.R
r/data-raw/: generate-test-geojsons.qmd  maine-matches.R
r/data-raw/geojson/: intersection_example_complex.geojson  intersection_example_simple.geojson
r/dev/: maine-matching.R
r/inst/extdata/: maine-osm-targets.fgb  maine-tigris-sources.fgb
r/man/: anime.Rd  get_matches.Rd  interpolate_extensive.Rd  interpolate_intensive.Rd  rnet_aggregate.Rd  rnetmatch-package.Rd
r/src/: Makevars.in  Makevars.win.in  anime-win.def  entrypoint.c
r/src/rust/: Cargo.toml
r/src/rust/src/: lib.rs
r/tests/: testthat.R
r/tests/testthat/: test_matches.R
rust/: Cargo.toml  README.html  README.md
rust/src/: interpolate.rs  lib.rs  overlap.rs  structs.rs
