[package]
name = 'anime_r'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'anime'

[dependencies]
arrow = "52.0.0"
arrow_extendr = "52.0.0"
extendr-api = '*'
geoarrow = "0.3.0"
itertools = "0.12.0"
anime = { path = "../../../rust" }


[patch.crates-io]
extendr-api = {git = "https://github.com/extendr/extendr"}