[package]
name = 'anime_r'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'anime'

[dependencies]
arrow = "52.0.0"
arrow_extendr = "52.0.0"
extendr-api = '*'
geoarrow = "0.3.0"
itertools = "0.12.0"
anime = "0.1.2"


[patch.crates-io]
extendr-api = {git = "https://github.com/extendr/extendr", rev = "2c2749f5e9d13d5628399c8779c47d420246a4a1"}